{
    "version": 1,
    "name": "PlayerInputsMap",
    "maps": [
        {
            "name": "MenuMap",
            "id": "bf274b30-c4f9-4478-bf95-fbaabf08e3e7",
            "actions": [
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "4f0bcf45-dedd-4d1c-91c7-b9c6bfc2818c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "1ba19030-8d4d-489c-9fde-4cc10adee64a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Up",
                    "type": "Button",
                    "id": "ba3ebcf2-96ee-4e80-b6c8-6340e49e013c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "cad42fad-eb74-4c42-be97-5fc1ecf2c1be",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Confirm",
                    "type": "Button",
                    "id": "ee829d9c-05f9-440c-b7fd-db69d4e1ea01",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Return",
                    "type": "Button",
                    "id": "0f2613d3-f5a5-4ee2-b7e2-6acac12403e2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "21745bd4-2581-46b8-b392-4475df29e227",
                    "path": "<Joystick>/stick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e0e7a50-130a-403b-ab17-852343e732c8",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc36b3c8-4307-4620-ae20-e7fd13c58308",
                    "path": "<Joystick>/stick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4dcd1cd-0ff4-4422-9c30-6cab53ca8e54",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f86f40f9-a481-46c6-9d3b-43fc7f69704f",
                    "path": "<Joystick>/stick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "486bb4cb-1f77-4780-8dbc-3d463aba2dd2",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "15513c24-bcf7-45a7-a46c-baf4303352db",
                    "path": "<Joystick>/stick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b97cf6a-90fc-4bf0-9b07-40092029dfa2",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c621ac7-02e8-4be2-b3a3-b2925ef2d4b7",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5180a98e-9171-4811-8f5e-db49eabdb7cb",
                    "path": "<Keyboard>/backspace",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Return",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InGameMap",
            "id": "b9236c2b-813b-424a-b0e0-b8ca8e0ab829",
            "actions": [
                {
                    "name": "Coat",
                    "type": "Button",
                    "id": "16d9ae27-f2ba-4c03-8390-b9f184b9d37c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Coat1",
                    "type": "Button",
                    "id": "502410b8-8c34-477d-af15-733cc81d7b40",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hat",
                    "type": "Button",
                    "id": "91c393fd-fdb6-4b49-90bf-f6523b3f55ed",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hat1",
                    "type": "Button",
                    "id": "76c8728f-b754-4150-8f01-ca672330b906",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reset",
                    "type": "Button",
                    "id": "555b59e3-494a-4997-a9cc-80af5275bcb4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shoe",
                    "type": "Button",
                    "id": "7db7afa7-ab62-40f2-b10f-242c44e7bb5d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shoe1",
                    "type": "Button",
                    "id": "cf611316-3088-4e73-b5b4-d1a5b4a0f837",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scan_Coat_BlackRed",
                    "type": "Button",
                    "id": "5feaa61b-167d-4c59-a3f4-f5bae237b34b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scan_Coat_Black",
                    "type": "Button",
                    "id": "410ef053-c236-4351-b46e-39d88d7c6fb1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scan_Coat_Yellow",
                    "type": "Button",
                    "id": "b98a7bb4-9466-4acc-8926-5fcc688b0f51",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scan_Hat_Blue",
                    "type": "Button",
                    "id": "15469011-8006-4433-b7db-61e2d99976b7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scan_Hat_Red",
                    "type": "Button",
                    "id": "87e6bd22-535b-4963-95c5-b3fc75e193ea",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scan_Shoe_BrownShoes",
                    "type": "Button",
                    "id": "5226b33c-9170-4cbf-b210-121af8696adc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scan_Shoe_BrownTalon",
                    "type": "Button",
                    "id": "145a0fdb-5a80-4382-8f3e-a439440c2805",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Bell",
                    "type": "Button",
                    "id": "e1b6d5c8-8229-4d16-8047-7d396b2b09bc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Bell1",
                    "type": "Button",
                    "id": "2432cca2-870f-4937-b3ea-98b50d0418ac",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "1e4b6525-9339-4ce1-9189-788a58a51090",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "F1",
                    "type": "Button",
                    "id": "3d3eac32-a0b2-4cd4-9476-7e44b47d6211",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "19139d2f-6e23-43d0-8b4b-6757307395cc",
                    "path": "<Joystick>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Coat",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70d709b4-0117-4cfd-a181-ef84e9aaec84",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Coat",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4ed9a12-ee50-422c-a1f4-da24562dd9e3",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Coat1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b41d20b3-60b6-4988-b25d-16419b809fd8",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Coat1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d28c6759-9137-49c8-8d5e-bfa0e4360c56",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/button8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hat",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dad0ab34-39e6-45df-b3e3-681f57e0c38b",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hat",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6901fdde-a272-46a9-8168-9d69be71954f",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/button9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hat1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa7b3794-7e99-4bf6-a9ff-fff20db0e469",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hat1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b6f1230-5562-4231-b2b6-2310d10bf131",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "51b23237-d7ae-44c6-adf5-f834b4f5d108",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoe",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e2bb44b-cd29-461c-9d88-4f28dd425f27",
                    "path": "<Joystick>/stick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoe1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa22dcce-e658-4f82-ae6c-679488140b2a",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scan_Coat_BlackRed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f931504-bb40-41dd-8873-c68be9811ab8",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scan_Coat_Black",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d016213e-2aa6-4fcc-b762-23ece018640c",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scan_Coat_Yellow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd0cc6d4-cf99-442a-88d4-6b7d6898918a",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scan_Hat_Blue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df5de530-8628-40bf-8454-5c7b0c41423e",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scan_Hat_Red",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "69d0ac08-30f9-4ac6-b2f0-f60cf5e8fd1a",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scan_Shoe_BrownShoes",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1acaf683-7e09-4042-8346-c9837bb519b3",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scan_Shoe_BrownTalon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b5ef1c0a-c6c3-4e11-8c7a-6ea6ba2c2a58",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/button12",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Bell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31b178e8-f39d-438f-bb69-a302608ffc75",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/button12",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Bell1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d2a73bb-f6e5-4f96-914d-7372e04410a7",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6551d413-05e0-4c38-81eb-eaa9ac9b7d69",
                    "path": "<Keyboard>/f1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "F1",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}